tests/ui/parser/issues/diagnostics-parenthesized-type-arguments-issue-120892-2.rs
fn main() {
  foo::/* definitely not harmful comment */(123, "foo") -> (u32); //~ ERROR: expected type, found `123`
  //~^ NOTE: while parsing this parenthesized list of type arguments starting
  //~^^ NOTE: expected type
}
